fix: client timeouts